--- a/backend/package.json
+++ b/backend/package.json
@@ -11,25 +11,36 @@
     "db:seed": "node src/config/seed.js",
     "test": "echo \"Tests coming soon\" && exit 0"
   },
-  "keywords": ["mpesa", "invoice", "payments", "kenya"],
-  "author": "Your Name",
+  "keywords": [
+    "mpesa",
+    "invoice",
+    "payments",
+    "kenya"
+  ],
+  "author": "Antony Mwangi",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
+    "axios": "^1.13.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "axios": "^1.6.2",
-    "simple-authx": "^2.0.0",
-    "nanoid": "^5.0.4",
-    "pg": "^8.11.3",
+    "dotenv": "^16.6.1",
+    "express": "^4.21.2",
+    "express-validator": "^7.3.0",
+    "helmet": "^8.1.0",
+    "morgan": "^1.10.1",
+    "nanoid": "^5.1.6",
+    "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.35.2",
-    "sqlite3": "^5.1.6"
+    "sequelize": "^6.37.7",
+    "simple-authx": "^2.0.0",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.1.10"
   },
   "engines": {
     "node": ">=18.0.0"
+  },
+  "directories": {
+    "test": "tests"
   }
 }
